--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>J&C</title>
+    <title>JC&R || INGENIERIA</title>
   </head>
   <body>
     <div id="root"></div>
